--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
     "babel-plugin-transform-runtime": "^6.23.0"
   },
   "devDependencies": {
+    "babel-eslint": "^10.0.1",
     "babel-preset-env": "^1.6.1",
-    "babel-preset-stage-3": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-3": "^6.24.1",
     "eslint": "^4.9.0",
     "eslint-config-prettier": "^2.6.0",
     "eslint-import-resolver-webpack": "^0.8.3",
